# STM32_tutoPoMad

./: ARCHITECTURE.md  CMakeLists.txt  README.md
firmware/app/: CMakeLists.txt  main.cpp
firmware/app/src/: main.cpp  stm32f0xx_it.c
firmware/drivers/: CMakeLists.txt
firmware/drivers/gpio/: gpio.cpp  gpio.hpp
firmware/platform/: CMakeLists.txt
firmware/platform/stm32f072/: CMakeLists.txt
scripts/: build.sh  flash_jlink.sh
